Fixing viewport spacing

--- a/css/components/viewport.css
+++ b/css/components/viewport.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    padding-top: 100px;
+    padding-top: 75px;
     padding-bottom: 100px;
     overflow: auto;
     overflow-x: hidden;
